--- a/fable-experiments.fsproj
+++ b/fable-experiments.fsproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="src/MDNCanvasTutorial/Index.fs" />
     <Compile Include="src/About.fs" />
     <Compile Include="src/App.fs" />
   </ItemGroup>
