Remove JSX with dom-chef in favor of basic string interpolation.
Add Fable css modules

Add Higherlighter utility class for VSCode highlighting

--- a/fable-experiments.fsproj
+++ b/fable-experiments.fsproj
@@ -7,7 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="src/Highlighter.fs" />
+    <Compile Include="src/WebComponents/Sample.fs" /> 
+    <Compile Include="src/CssModules.fs" />
     <Compile Include="src/MDNCanvasTutorial/Index.fs" />
+    <Compile Include="src/Home.fs" />
     <Compile Include="src/About.fs" />
     <Compile Include="src/App.fs" />
   </ItemGroup>
